--- a/src/app/feature/user/user-create/user-create.component.html
+++ b/src/app/feature/user/user-create/user-create.component.html
@@ -1,1 +1,76 @@
-<p>user-create works!</p>
+<div class="p-4">
+  <h1>{{ title }}</h1>
+  <table>
+    <tr>
+      <td>User Name:</td>
+      <td>
+        <input [(ngModel)]="newUser.username" type="text" />
+      </td>
+    </tr>
+    <tr>
+      <td>Password:</td>
+      <td>
+        <input [(ngModel)]="newUser.password" type="password" />
+      </td>
+    </tr>
+    <tr>
+      <td>First Name:</td>
+      <td>
+        <input [(ngModel)]="newUser.firstName" type="text" />
+      </td>
+    </tr>
+    <tr>
+      <td>Last Name:</td>
+      <td>
+        <input [(ngModel)]="newUser.lastName" type="text" />
+      </td>
+    </tr>
+    <tr>
+      <td>Phone Number:</td>
+      <td>
+        <input [(ngModel)]="newUser.phoneNumber" type="text" />
+      </td>
+    </tr>
+    <tr>
+      <td>Email:</td>
+      <td>
+        <input [(ngModel)]="newUser.email" type="text" />
+      </td>
+    </tr>
+    <tr>
+      <td>Character Name:</td>
+      <td>
+        <input [(ngModel)]="newUser.characterName" type="text" />
+      </td>
+    </tr>
+    <tr>
+      <td>Class:</td>
+      <td>
+        <select [(ngModel)]="newUser.job" class="rounded">
+          <option *ngFor="let job of jobs" [ngValue]="job">
+            {{ job }}
+          </option>
+        </select>
+      </td>
+    </tr>
+    <tr>
+      <td>Title:</td>
+      <td>
+        <input [(ngModel)]="newUser.title" type="text" />
+      </td>
+    </tr>
+    <tr>
+      <td>Reviewer:</td>
+      <td>
+        <input [(ngModel)]="newUser.reviewer" type="checkbox" />
+      </td>
+    </tr>
+    <tr>
+      <td>Admin:</td>
+      <td>
+        <input [(ngModel)]="newUser.admin" type="checkbox" />
+      </td>
+    </tr>
+  </table>
+  <button (click)="addUser()">Add User</button>
+</div>
