--- a/src/app/feature/user/user-list/user-list.component.html
+++ b/src/app/feature/user/user-list/user-list.component.html
@@ -16,6 +16,7 @@
         <th>Email</th>
         <th>Character Name</th>
         <th>Job</th>
+        <th>Title</th>
         <th>Reviewer</th>
         <th>Admin</th>
       </thead>
@@ -30,6 +31,7 @@
           <td>{{ u.email }}</td>
           <td>{{ u.characterName }}</td>
           <td>{{ u.job }}</td>
+          <td>{{ u.title }}</td>
           <td>{{ u.reviewer }}</td>
           <td>{{ u.admin }}</td>
           <td>
