--- a/src/app/feature/product/product-create/product-create.component.html
+++ b/src/app/feature/product/product-create/product-create.component.html
@@ -1,1 +1,51 @@
-<p>product-create works!</p>
+<div class="p-4">
+    <h1>{{ title }}</h1>
+    <table>
+      <tr>
+        <td>Part Number:</td>
+        <td>
+          <input [(ngModel)]="newProduct.partNumber" type="text" />
+        </td>
+      </tr>
+      <tr>
+        <td>PhotoPath:</td>
+        <td>
+          <input [(ngModel)]="newProduct.photoPath" type="text" />
+        </td>
+      </tr>
+      <tr>
+        <td>Name:</td>
+        <td>
+          <input [(ngModel)]="newProduct.name" type="text" />
+        </td>
+      </tr>
+      <tr>
+        <td>Price:</td>
+        <td>
+          <input [(ngModel)]="newProduct.price" type="number" />
+        </td>
+      </tr>
+      <tr>
+        <td>unit:</td>
+        <td>
+          <input [(ngModel)]="newProduct.unit" type="text" />
+        </td>
+      </tr>
+      <tr>
+        <td>Vendor:</td>
+        <td>
+            <select
+            [(ngModel)]="newProduct.vendor"
+            class="rounded"
+            [compareWith]="compVendor"
+            >
+            <option *ngFor="let v of vendors" [ngValue]="v">
+                {{ v.name}}
+            </option>
+        </select>
+        </td>
+    </tr>
+    </table>
+    <button (click)="addProduct()">Add Product</button>
+  </div>
+  
