--- a/src/app/feature/product/product-detail/product-detail.component.html
+++ b/src/app/feature/product/product-detail/product-detail.component.html
@@ -1,1 +1,63 @@
-<p>product-detail works!</p>
+<div class="p-4">
+    <h1>{{ title }}</h1>
+    <table>
+      <tr>
+        <td>Part Number:</td>
+        <td>
+          <input [(ngModel)]="product.partNumber" type="text" disabled />
+        </td>
+      </tr>
+      <tr>
+        <td>PhotoPath:</td>
+        <td>
+          <input [(ngModel)]="product.photoPath" type="text" disabled />
+        </td>
+      </tr>
+      <tr>
+        <td>Name:</td>
+        <td>
+          <input [(ngModel)]="product.name" type="text" disabled />
+        </td>
+      </tr>
+      <tr>
+        <td>Price:</td>
+        <td>
+          <input [(ngModel)]="product.price" type="number" disabled />
+        </td>
+      </tr>
+      <tr>
+        <td>unit:</td>
+        <td>
+          <input [(ngModel)]="product.unit" type="text" disabled />
+        </td>
+      </tr>
+      <tr>
+        <td>Vendor:</td>
+        <td>
+            <select
+            [(ngModel)]="product.vendor"
+            class="rounded"
+            [compareWith]="compVendor"
+            disabled >
+            <option *ngFor="let v of vendors" [ngValue]="v">
+                {{ v.name}}
+            </option>
+        </select>
+        </td>
+    </tr>
+    </table>
+    <span>
+        <span
+          ><a routerLink="/product-edit/{{ product.id }}" class="btn btn-sm btn-warning"
+            >Edit</a
+          ></span
+        >
+        <span>
+          |
+          <button (click)="delete()" class="btn btn-sm btn-danger">
+            Delete
+          </button></span
+        >
+      </span>
+  </div>
+  
