--- a/src/app/feature/request/request-create/request-create.component.html
+++ b/src/app/feature/request/request-create/request-create.component.html
@@ -1,1 +1,41 @@
-<p>request-create works!</p>
+<div class="p-4">
+    <h1>{{ title }}</h1>
+    <table>
+      <tr>
+        <td>User:</td>
+        <td>
+            <input [(ngModel)]="newRequest.user.characterName" type="text" disabled />
+        </td>
+      </tr>
+      <tr>
+        <td>Description:</td>
+        <td>
+          <input [(ngModel)]="newRequest.description" type="text" />
+        </td>
+      </tr>
+      <tr>
+        <td>Justificatoin:</td>
+        <td>
+          <input [(ngModel)]="newRequest.justification" type="text" />
+        </td>
+      </tr>
+      <tr>
+        <td>Date Needed:</td>
+        <td>
+          <input [(ngModel)]="newRequest.dateNeeded" type="date" />
+        </td>
+      </tr>
+      <tr>
+        <td>Delivery Mode:</td>
+        <td>
+            <select [(ngModel)]="newRequest.deliveryMode" class="rounded">
+              <option *ngFor="let delivery of deliveries" [ngValue]="delivery">
+                {{ delivery }}
+              </option>
+            </select>
+          </td>
+      </tr>
+    </table>
+    <button (click)="addRequest()">Create</button>
+  </div>
+  
