--- a/src/app/feature/request/request-detail/request-detail.component.html
+++ b/src/app/feature/request/request-detail/request-detail.component.html
@@ -1,1 +1,81 @@
-<p>request-detail works!</p>
+<div class="p-4">
+    <h1>{{ title }}</h1>
+    <table>
+      <tr>
+        <td>User:</td>
+        <td>
+            <input [(ngModel)]="request.user.characterName" type="text" disabled />
+        </td>
+      </tr>
+      <tr>
+        <td>Description:</td>
+        <td>
+          <input [(ngModel)]="request.description" type="text" disabled />
+        </td>
+      </tr>
+      <tr>
+        <td>Justificatoin:</td>
+        <td>
+          <input [(ngModel)]="request.justification" type="text" disabled />
+        </td>
+      </tr>
+      <tr>
+        <td>Date Needed:</td>
+        <td>
+          <input [(ngModel)]="request.dateNeeded" type="date" disabled />
+        </td>
+      </tr>
+      <tr>
+        <td>Delivery Mode:</td>
+        <td>
+            <select [(ngModel)]="request.deliveryMode" class="rounded"disabled >
+              <option *ngFor="let delivery of deliveries" [ngValue]="delivery">
+                {{ delivery }}
+              </option>
+            </select>
+          </td>
+      </tr>
+      <tr>
+        <td>Status:</td>
+        <td>
+            <select [(ngModel)]="request.status" class="rounded"disabled >
+              <option *ngFor="let status of statuses" [ngValue]="status">
+                {{ status }}
+              </option>
+            </select>
+          </td>
+      </tr>
+      <tr>
+        <td>Total:</td>
+        <td>
+          <input [(ngModel)]="request.total" type="number" disabled />
+        </td>
+      </tr>
+      <tr>
+        <td>Submitted Date:</td>
+        <td>
+          <input [(ngModel)]="request.submittedDate" type="datetime-local" disabled />
+        </td>
+      </tr>
+      <tr>
+        <td>Reason for Rejection:</td>
+        <td>
+          <input [(ngModel)]="request.reasonForRejection" type="text" disabled />
+        </td>
+      </tr>
+    </table>
+    <span>
+        <span
+          ><a routerLink="/request-edit/{{ request.id }}" class="btn btn-sm btn-warning"
+            >Edit</a
+          ></span
+        >
+        <span>
+          |
+          <button (click)="delete()" class="btn btn-sm btn-danger">
+            Delete
+          </button></span
+        >
+      </span>
+  </div>
+  
