--- a/src/app/feature/request/request-edit/request-edit.component.html
+++ b/src/app/feature/request/request-edit/request-edit.component.html
@@ -1,1 +1,75 @@
-<p>request-edit works!</p>
+<div class="p-4">
+    <h1>{{ title }}</h1>
+    <table>
+      <tr>
+        <td>User:</td>
+        <td>
+            <input [(ngModel)]="request.user.characterName" type="text" disabled />
+        </td>
+      </tr>
+      <tr>
+        <td>Description:</td>
+        <td>
+          <input [(ngModel)]="request.description" type="text" />
+        </td>
+      </tr>
+      <tr>
+        <td>Justificatoin:</td>
+        <td>
+          <input [(ngModel)]="request.justification" type="text" />
+        </td>
+      </tr>
+      <tr>
+        <td>Date Needed:</td>
+        <td>
+          <input [(ngModel)]="request.dateNeeded" type="date" />
+        </td>
+      </tr>
+      <tr>
+        <td>Delivery Mode:</td>
+        <td>
+            <select [(ngModel)]="request.deliveryMode" class="rounded">
+              <option *ngFor="let delivery of deliveries" [ngValue]="delivery">
+                {{ delivery }}
+              </option>
+            </select>
+          </td>
+      </tr>
+      <tr>
+        <td>Status:</td>
+        <td>
+            <select [(ngModel)]="request.status" class="rounded">
+              <option *ngFor="let status of statuses" [ngValue]="status">
+                {{ status }}
+              </option>
+            </select>
+          </td>
+      </tr>
+      <tr>
+        <td>Total:</td>
+        <td>
+          <input [(ngModel)]="request.total" type="number" />
+        </td>
+      </tr>
+      <tr>
+        <td>Submitted Date:</td>
+        <td>
+          <input [(ngModel)]="request.submittedDate" type="datetime-local" />
+        </td>
+      </tr>
+      <tr>
+        <td>Reason for Rejection:</td>
+        <td>
+          <input [(ngModel)]="request.reasonForRejection" type="text" />
+        </td>
+      </tr>
+    </table>
+    <span>
+        <span
+        ><button (click)="save()" class="btn btn-sm btn-primary">
+          Save
+        </button></span
+      >
+    </span>
+  </div>
+  
