--- a/src/app/core/menu/menu.component.html
+++ b/src/app/core/menu/menu.component.html
@@ -1,5 +1,6 @@
 <nav>
     <ul>
+        <a routerLink="" style="background: none"><img src="favicon.ico" alt="BMDB" class="logo"></a>
         <li *ngFor="let mi of menuItems" title="{{mi.tooltip}}">
             <a routerLink="{{mi.href}}">{{mi.display}}</a>
         </li>
