--- a/src/app/feature/request/request-edit/request-edit.component.html
+++ b/src/app/feature/request/request-edit/request-edit.component.html
@@ -1,6 +1,6 @@
 <div class="p-4">
     <h1>{{ title }}</h1>
-    <table>
+    <table *ngIf="request">
       <tr>
         <td>User:</td>
         <td>
