--- a/src/app/core/menu/menu.component.html
+++ b/src/app/core/menu/menu.component.html
@@ -1,8 +1,19 @@
 <nav>
+    <span
+    style="
+    color: whitesmoke;
+    float: right;
+    padding-right: 30px;
+    font-style: italic;
+    font-weight: bold;"
+    >
+    {{ welcomeMsg}}
+    </span>
     <ul>
         <a routerLink="" style="background: none"><img src="favicon.ico" alt="BMDB" class="logo"></a>
         <li *ngFor="let mi of menuItems" title="{{mi.tooltip}}">
+            <ng-container *ngIf="!mi.requiresReviewer || loggedInUser?.reviewer">
             <a routerLink="{{mi.href}}">{{mi.display}}</a>
+            </ng-container>
         </li>
-    </ul>
-</nav>
+</ul>
