--- a/src/app/feature/lineitem/request-lines/request-lines.component.html
+++ b/src/app/feature/lineitem/request-lines/request-lines.component.html
@@ -1,3 +1,4 @@
+<app-menu></app-menu>
 <div class="p-4">
   <section>
     <span class="page-title font-weight-bold font-italic">{{
@@ -40,7 +41,7 @@
       <th>Quantity</th>
       <th>Price</th>
       <th>Line Total</th>
-      <th>Actoin</th>
+      <th>Action</th>
     </thead>
     <tbody>
       <tr *ngFor="let li of lineItems">
@@ -85,7 +86,23 @@
             />
           </a>
         </td>
-      </tr>
+        <tr>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <!-- <td></td> -->
+          <td>
+            <span>
+              <span
+              ><button [disabled]="!lineItems" (click)="submitForReview()" class="btn btn-sm btn-primary">
+                Submit for Review
+              </button></span
+              >
+            </span>
+          </td>
+        </tr>
     </tbody>
   </table>
 </div>
