--- a/src/app/feature/request/request-detail/request-detail.component.html
+++ b/src/app/feature/request/request-detail/request-detail.component.html
@@ -1,6 +1,7 @@
+<app-menu></app-menu>
 <div class="p-4">
     <h1>{{ title }}</h1>
-    <table>
+    <table *ngIf="request">
       <tr>
         <td>User:</td>
         <td>
@@ -64,7 +65,7 @@
         </td>
       </tr>
     </table>
-    <span>
+    <span *ngIf="request">
         <span
           ><a routerLink="/request-edit/{{ request.id }}" class="btn btn-sm btn-warning"
             >Edit</a
